Add Javadoc comment